// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a page with entity 1`] = `
"<!--lit-part 5QjrkbWt8KY=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part-->Us<!--/lit-part--></span
        >
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav><!--/lit-part-->"
`;

exports[`should render a page with pre-fetched data 1`] = `
"<!--lit-part GjHwkgukOCo=--><h1><!--lit-part-->Antony<!--/lit-part-->'s Posts</h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav>
      <ul>
        <!--lit-part--><!--lit-part 2+vbCTTZHYo=--><li><!--lit-node 1--><a href="/posts/1"><!--lit-part-->Inglorious Store<!--/lit-part--></a></li><!--/lit-part--><!--lit-part 2+vbCTTZHYo=--><li><!--lit-node 1--><a href="/posts/2"><!--lit-part-->lit-html<!--/lit-part--></a></li><!--/lit-part--><!--lit-part 2+vbCTTZHYo=--><li><!--lit-node 1--><a href="/posts/3"><!--lit-part-->Inglorious Web<!--/lit-part--></a></li><!--/lit-part--><!--lit-part 2+vbCTTZHYo=--><li><!--lit-node 1--><a href="/posts/4"><!--lit-part-->Inglorious SSX<!--/lit-part--></a></li><!--/lit-part--><!--/lit-part-->
      </ul><!--/lit-part-->"
`;

exports[`should render a static page fragment 1`] = `
"<!--lit-part 5QjrkbWt8KY=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part--><!--/lit-part--></span
        >
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav><!--/lit-part-->"
`;

exports[`should render a whole static page 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <title>About</title>
  
  <link rel="stylesheet" href="./style.css">
</head>
<body>
  <div id="root"><!--lit-part 5QjrkbWt8KY=--><h1>
        About
        <!--lit-node 1--><span 
          ><!--lit-part--><!--/lit-part--></span
        >
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav><!--/lit-part--></div>

  <script type="module" src="/main.js"></script>
  <script type="module" src="./ga.js"></script>
</body>
</html>"
`;
